[gd_scene load_steps=7 format=3 uid="uid://g137ujk8f1hs"]

[ext_resource type="Theme" uid="uid://c78kjgp3n555s" path="res://theme/gb-theme.tres" id="1_fi185"]
[ext_resource type="Script" path="res://scenes/UI/menus/main_menu.gd" id="2_3fqh5"]
[ext_resource type="PackedScene" uid="uid://d3lqywc6pyxe3" path="res://scenes/UI/credits-and-how-to-play/info.tscn" id="3_jghf0"]

[sub_resource type="Animation" id="Animation_kix4x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cjocu"]
resource_name = "screen_transition"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.00392157)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2uene"]
_data = {
"RESET": SubResource("Animation_kix4x"),
"screen_transition": SubResource("Animation_cjocu")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fi185")
script = ExtResource("2_3fqh5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../TransitionBackground")
libraries = {
"": SubResource("AnimationLibrary_2uene")
}

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.0862745, 0.25098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_right = 42.0
offset_bottom = 123.0
grow_horizontal = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Boo Who?"

[node name="ButtonsContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
focus_neighbor_top = NodePath("Quit")
focus_neighbor_bottom = NodePath("StartButton")
focus_mode = 2
theme = ExtResource("1_fi185")

[node name="StartButton" type="Button" parent="ColorRect/VBoxContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Controls")
theme = ExtResource("1_fi185")
button_mask = 0
text = "Start"

[node name="Controls" type="Button" parent="ColorRect/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../Credits")
button_mask = 0
text = "How to play"

[node name="Credits" type="Button" parent="ColorRect/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_top = NodePath("../Controls")
focus_neighbor_bottom = NodePath("../Quit")
button_mask = 0
text = "Credits"

[node name="Quit" type="Button" parent="ColorRect/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_top = NodePath("../Credits")
focus_neighbor_bottom = NodePath("../StartButton")
button_mask = 0
text = "Quit"

[node name="TransitionBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = -8.9125
anchor_top = -5.81944
anchor_right = -8.9125
anchor_bottom = -5.81944
offset_right = 1280.0
offset_bottom = 980.0
scale = Vector2(10, 10)
color = Color(0.0823529, 0.0862745, 0.25098, 1)
metadata/_edit_use_anchors_ = true

[node name="Credits" parent="." instance=ExtResource("3_jghf0")]
visible = false
layout_mode = 1
text = "	Game Design
	jmch16.itch.io
	pixelunicorn29.itch.io
		
	Programming
	jmch16.itch.io

	Art
	pixelunicorn29.itch.io"
title = "Credits"

[node name="Controls" parent="." instance=ExtResource("3_jghf0")]
visible = false
layout_mode = 1
text = "- Press 'A' to spook kids when near them
- Play minigames to earn candy
- Move around the neighborhood with the arrow keys
- Spook all kids to win"
title = "How to play"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonsContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonsContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonsContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ButtonsContainer/Quit" to="." method="_on_quit_pressed"]
